# nyu-computational-dynamics

./: README.md
jupyter/: asset_pricing_gmm.html  asset_pricing_gmm.ipynb  asset_pricing_gmm_tests.ipynb  asset_pricing_mehra_prescott.ipynb  asset_pricing_mehra_prescott_yield_curve.ipynb  asset_valuation_gmm.ipynb  asset_valuation_gmm_tests.ipynb  asset_valuation_mehra_prescott.ipynb  asset_valuation_mehra_prescott_yield_curve.ipynb  defs_course.py  filtering_kalman_filter.ipynb  filtering_recessions_bernoulli.ipynb  filtering_recessions_kalman_filter.ipynb  finite_differences_black_scholes.ipynb  finite_differences_brownian_motion.ipynb  installation_instructions_binder.ipynb  installation_instructions_colab.ipynb  instruction_for_colab_users.html  instruction_for_colab_users.ipynb  perturbation_campbell_shiller_decomposition.ipynb  q_learning_mccall.ipynb  requirements.txt  search_mccall_analysis.html  search_mccall_analysis.ipynb  search_mccall_mean_preserving_spread.ipynb  search_mccall_monte_carlo.ipynb  search_mccall_temporary_and permanent_job.ipynb  search_mccall_time_varying_wage_offers.ipynb
jupyter/.ipynb_checkpoints/: Mehra Prescott Yield Curve-checkpoint.ipynb  asset_pricing_gmm-checkpoint.ipynb  (+2 more)
jupyter/TA Session/: script.py
jupyter/course_build/: LICENSE  README.md  pyproject.toml
jupyter/course_build/src/course/: __init__.py  data.py  defs.py  kalman_filter.py  plot.py
jupyter/course_build/src/course.egg-info/: PKG-INFO  SOURCES.txt
matlab/: asset_valuation_Markov_chain.m  asset_valuation_mehra_prescott.m
utils/: convert_ipynb_to_pdf.py
(+12 files in other folders)
